Updated ahrefs name to ahrefsblog

--- a/seo_mod2.html
+++ b/seo_mod2.html
@@ -42,7 +42,7 @@
         <p>When a user sees a URL such as <a href="https://www.3mediaweb.com/web-services/web-design/" target="_blank">https://www.3mediaweb.com/web-services/web-design/</a> (Web Services > Web Design).</p>
         <p> It’s easy to see that web design is a service we provide and not, say, a blog post about web design, which we would categorize under <a href="https://www.3mediaweb.com/blog/category/web-design/" target="_blank"> https://www.3mediaweb.com/blog/category/web-design/</a>.</p>        
         <h3>Tip 3: Learn What Your Customers are <i>actually</i> searching for</h3>
-        <p>According to Markov from <a href="https://ahrefs.com/blog/seo-basics/" target="_blank">ahrefs (All in One SEO toolset)</a>,"You can’t optimize your website without knowing what your customers are searching for—that much is obvious."</p>
+        <p>According to Markov from <a href="https://ahrefs.com/blog/seo-basics/" target="_blank">ahrefsblog (All in One SEO toolset)</a>,"You can’t optimize your website without knowing what your customers are searching for—that much is obvious."</p>
         <p>a) Figure out the most popular way people search for your business</p>
         <p>b) Understand other ways people may be searching for the same thing</p>
         <p>c) Delve deeper into the more granular searches your customers are making</p>
