--- a/hw5.html
+++ b/hw5.html
@@ -2,8 +2,11 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>HTML Headers: 1 to 3</title>
-        <meta name="description" content="Webpage displaying examples of different HTML header tags from header tag one to header tag three.">
+        <title>HTML Headers with CSS: 1 to 3</title>
+        <meta name="description" content="Webpage displaying examples of different HTML header tags from header tag one to header tag three with CSS.">
+        <meta property="og:title" content="HTML Headers with CSS: 1 to 3">
+        <meta property="og:url" content="https://jhuynh17.github.io/hw5.html">
+        <meta property="og:description" content="Webpage displaying examples of different HTML header tags from header tag one to header tag three with CSS.">
         <style>
 
             #jsalarmclock{
