--- a/hw5.html
+++ b/hw5.html
@@ -104,7 +104,7 @@
             </script>
     </head>
     <body style="background-image:url('double-bubble-outline.png'); background-color:#fbfdfd;">
-        <header><h1 style="text-align:center;">HTML Headers: 1 to 3</h1></header>
+        <header><h1 style="text-align:center;">HTML Headers with CSS: 1 to 3</h1></header>
         <section>
         <h2 style="font-style:italic;">How headers are helpful pt.1</h2>
         <p><span style="font-size:50px">H</span>eaders are used to help structure and provide headlines in level of importance. It is best practice to have the first biggest headline or title to have the header tag one. Followed by header two, threee, and so on.</p>
