--- a/homework1.html
+++ b/homework1.html
@@ -13,7 +13,7 @@
        <section>
         <h2>Menu</h2>
         <ul>
-            <li><a href="http://jhuynh17.github.io/index.html/homework1.html">Home</a></li>
+            <li><a href="http://jhuynh17.github.io/homework1.html">Home</a></li>
             <li><a href="assignments.html">Assignments</a></li>
             <li>MeetUp Report</li>
             <li>Contact</li>
