--- a/hw4.html
+++ b/hw4.html
@@ -2,51 +2,28 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Welcome to CCSF Web Development Department!</title>
-        <meta name="description" content="A webpage with information use of list tags and definitions of HTML, CSS, FTP, and SSH.">
-        <meta property="og:title" content="Welcome to CCSF Web Development Department!">
+        <title>Wilbur Scott Elementary School</title>
+        <meta name="description" content="This is the homepage of Wilbur Scott Elemetary School for students age five to ten.">
+        <meta property="og:title" content="Wilbur Scott Elementary School">
         <meta property="og:url" content="https://jhuynh17.github.io/hw4.html">
-        <meta property="og:description" content="A webpage with information use of list tags and definitions of HTML, CSS, FTP, and SSH.">
+        <meta property="og:description" content="This is the homepage of Wilbur Scott Elemetary School for students age five to ten.">
+        <link rel="stylesheet" href="hw4.css">
     </head>
     <body>
-       <header><h1>Welcome to CCSF Web Development Department!</h1></header>
-        <ul>
-            <li><a href="https://www.ccsf.edu" target="_blank" rel="noopener noreferrer">City College Website</a></li>
-            <li><a href="https://jhuynh17.github.io/index.html" target="_blank" rel="noopener noreferrer">First Web Page</a></li>
-            <li><a href="https://thegreatdiscontent.com/" target="_blank" rel="noopener noreferrer">Jen's Favorite Website</a></li>
-        </ul>
-        <table>
-            <tr>
-                <th>Lists</th>
-                <th>Usage</th>
-            </tr>
-            <tr>
-                <td>Unordered List</td>
-                <td>Unordered list are made up of list tags. To start unordered lists, you must first define it with unordered list tags &#60;ul&#62; with list tags &#60;li&#62; and &#60;/li&#62;, and closes the tag with &#60;/ul&#62;. List tags are organized with bullet points by default are listed in no particular order; it is great to use this to list grocery items, menu items, and etc.
-                </td>
-            </tr>
-            <tr>
-                <td>Ordered List</td>
-                <td>Ordered list are started and defined with open and closed ol tags &#60;ol&#62;and &#60;/ol&#62;. In between the ol tags are list tags &#60;li&#62; &#60;/li&#62;. Ordered lists are used to list steps, instructions, or things you want in order. At default, ordered lists are listed with a number and used to present information in a specific order.</td>
-            </tr>
-            <tr>
-            <td>Definition List</td>
-            <td>Defintion lists are unique as they come with two tags, one being and starts with the defined term tag &#60;dt&#62;&#60;/dt&#62; and the definition description tag &#60;dd&#62; &#60;/dd&#62;. Definition lists are used to create glossaries, vocabulary, questions and answers, and more. </td>
-            </tr>
-        </table>
+        <header><h1>Wilbur Scott Elementary School</h1></header>
+        <section>
+            <article>
+         <h2>About Us</h2>   
+        <p>Wilbur Scott Elementary School is the embodiment of diversity, inclusivity, and success. Wilbur Scott has been open since 1982 and we continue to be open to our future and current students. Children ages five to ten attend this school. Applications are still open for 2022-2023.</p>
         <figure>
-        <img src="dictionaries.jpg" alt="photo of many dictionary books">
-        <figcaption>Reference of photo: Alborzagros from Wikipedia</figcaption>
+            <img src="ws_school.jpeg" alt="Picture of front of Wilbur Scott Elementary School with crayon pillars">
+            <figcaption>Wilbur Scott Elementary School</figcaption>
         </figure>
-        <dl>
-            <dt>HTML</dt>
-            <dd>HTML stands for Hyper Text Markup Language, it is not a programming language and HTML is the meat or content shown on a webpage such as the words and sentences, special formats with headings, structured with lists and paragraphs. </dd>
-            <dt>CSS</dt>
-            <dd>CSS stands for Cascading Style Sheet, it is also not a programming lanaguage. CSS helps bring the web page to life through styling with properties and values to design how the web page should look. With CSS, developers can customize and add color, create alignment for web content, adjust size of things, create dotted, solid, and dashed colorful borders and more.</dd>
-            <dt>FTP</dt>
-            <dd>FTP stands for File Transfer Protocol. It is the internet protocol that transfer files between computers connected to the internet. A few FTP servies are FileZilla FTP Client, FUGU, and Cyberduck.</dd>
-            <dt>SSH</dt>
-            <dd>SSH also known as Secure Shell, is a network communication protocol that allows two comptuer to communciate and share date. A transfer services is SSH File Transfer Client.</dd>
-        </dl>
+    <footer>
+        <p id="footerlinks"><a href="hw4.html">Home</a> | 
+        <a href="assignments.html">CNIT 132 Assignments</a></p>
+    </footer>
+    </article>
+</section>
     </body>
 </html>
