--- a/assignments.html
+++ b/assignments.html
@@ -11,7 +11,7 @@
     <body>
         <h1>CNIT 132 Assignments</h1>
         <p>CNIT 132 Assignments will be here soon. Please wait until the end of this month, February or in the next few months to see assignments appear.</p>
-        <a href="https://jhuynh17.github.io/hw4.html">Working with Images</a>
+        <a href="hw4.html">Working with Images</a>
     </body>
 </html>
 <!--Jen Huynh, Created Febuary 22, 2021 --> 
