Update homework2.html link to page

--- a/assignments.html
+++ b/assignments.html
@@ -12,7 +12,8 @@
         <h1>CNIT 132 Assignments</h1>
         <p>CNIT 132 Assignments will be here soon. Please wait until the end of this month, February or in the next few months to see assignments appear.</p>
         <a href="assignments.html">CNIT 132 Assignments</a> |
-        <a href="hw4.html">Working with Images</a>
+        <a href="hw4.html">Working with Images</a> |
+        <a href="homework2.html">Working with CSS</a>
         <!--Jen Huynh, Created Febuary 22, 2021 --> 
     </body>
 </html>
