Update Assignments.html link
Update Assignments.html link text to CNIT 132 Assignments

--- a/homework2.html
+++ b/homework2.html
@@ -81,7 +81,7 @@
     </table>
     <footer>
         <a href="homework2.html">Very Old HTML Page</a> |
-        <a href="assignments.html">Working with CSS Page</a>
+        <a href="assignments.html">CNIT 132 Assignments</a>
     </footer>
 </body>
 
