Updated paragraph with id tags

--- a/assig5.html
+++ b/assig5.html
@@ -28,9 +28,9 @@
             <h2>Our Mission</h2>
             <h3>Learn and Grow</h3>
             <img src="student.jpg" width="150" height="140" alt="Catoon image of boy coding on desktop" />
-            <p>We offer the environment so students can learn, grow and get a job position in the current competitive
+            <p id="redletter1">We offer the environment so students can learn, grow and get a job position in the current competitive
                 job market! This is our main mission!</p>
-            <p>Our faculty goes through a very intensive process to be hired as we want to offer the best to our
+            <p  id="redletter2">Our faculty goes through a very intensive process to be hired as we want to offer the best to our
                 students to produce the best!</p>
             <div id="footer">
                 <p>Making our community stronger</p>
