--- a/assignments.html
+++ b/assignments.html
@@ -14,7 +14,8 @@
         <a href="assignments.html">CNIT 132 Assignments</a> |
         <a href="hw4.html">Working with Images</a> |
         <a href="homework2.html">Working with CSS</a> |
-        <a href="assig5.html">CSS Pseudo and Position</a>
+        <a href="assig5.html">CSS Pseudo and Position</a> |
+        <a href="assig7.html">Building Forms with CSS and HTML</a>
         <!--Jen Huynh, Created Febuary 22, 2021 --> 
     </body>
 </html>
