Update age size
Removed size code on age element because it was already modified in CSS section

--- a/assig7.html
+++ b/assig7.html
@@ -61,7 +61,7 @@ h1 { text-align: center; font-style: italic; color: gold; }
   <!-- Last Name - this field should accept only a maximum of 25 characters -->
   <label for id="lastname">Last Name</label><input type="text" required name="lastname" id="lastname" size="77" maxlength="25">
  <!-- Age - this field should accept only numbers between 18 and 65 (both included) -->
-  <label for id="age">Age</label><input type="number" name="age" id="age" size="77" min="18" max="65">
+  <label for id="age">Age</label><input type="number" name="age" id="age" min="18" max="65">
   <!-- Email - this field should be required -->
   <label for="myemail">Email</label>
   <input type="email" name="myemail" id="myemail" required size="77"/>
