Update Choose Your Reward field
Removed the word 'field' in the form for dropdown section

--- a/assig7.html
+++ b/assig7.html
@@ -69,7 +69,7 @@ h1 { text-align: center; font-style: italic; color: gold; }
   <label for id="setdate">Date of your Membership</label>
   <input type="date" name="setdate" id="setdate" size="77" max="2021-12-31">
  <!-- Choose your reward - this will be a field with the options as shown in the right bottom part of the image below -->
-  <label for = "reward">Choices for "Choose your Reward" field</label><select id="reward">
+  <label for = "reward">Choices for "Choose your Reward"</label><select id="reward">
     <option></option>
     <option>Two-year Member Magazine subscription" </option>
     <option>2 Tickets to Annual Semiar</option>
