Update d page with new link
Added new page link to another assignment regarding a MeetUp event report

--- a/assignments.html
+++ b/assignments.html
@@ -15,7 +15,8 @@
         <a href="hw4.html">Working with Images</a> |
         <a href="homework2.html">Working with CSS</a> |
         <a href="assig5.html">CSS Pseudo and Position</a> |
-        <a href="assig7.html">Building Forms with CSS and HTML</a>
+        <a href="assig7.html">Building Forms with CSS and HTML</a> |
+        <a href="meetup.html">MeetUp Report</a>
         <!--Jen Huynh, Created Febuary 22, 2021 --> 
     </body>
 </html>
