--- a/meetup.html
+++ b/meetup.html
@@ -18,7 +18,7 @@
         <p>The event I attended is called “Javascript 101.’ Through this event, I learned about what JavaScript is used for and how it plays an important role  in the technology world, the origin of Javascript, and some fundamentals of JavaScript such as: values, types, operators, keywords, labels, comments and functions.</p>
         <p> They have 4 courses available and once you participate in each course, they will give you an online code you can collect. Once you have all 4 codes from completing the course, you are able to redeem it and have their premium JavaScript course for free.</p>
         <h2>MeetUp Page Link</h2>
-        <img src="js-event.jpeg" alt="Screenshot image of Meetup event page where people can sign up">
+        <img id="signup" src="js-event.jpeg" alt="Screenshot image of Meetup event page where people can sign up">
          <p><a href="https://www.meetup.com/hackreactor/events/276314583/">View the MeetUp Event Page</a></p>
         </section>
         <footer>
