--- a/homework1.html
+++ b/homework1.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+  <!-- Jen Huynh, Created Febuary 22, 2021 -->
 <html lang="en">
     <head>
         <meta charset="utf-8">
@@ -7,20 +8,35 @@
         <meta property="og:title" content="Jen Huynh- CNIT 132">
         <meta property="og:url" content="https://jhuynh17.github.io/homework1.html">
         <meta property="og:description" content="This page presents Jen Huynh's CNIT 132 homepage with links to assignments, her biography, and reccommended links for web developers.">
+        <link rel="stylesheet" href="homework1.css">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     </head>
     <body>
-       <header><h1>Jen Huynh - CNIT 132</h1></header>
-       <section>
-        <h2>Menu</h2>
+        <div class="wrapper grid">
+        <div class="header"> 
+       <header>
+        <img class="favicon-logo" src="favicon-32x32.png" alt="Favicon of Jen Huynh's website">
+        <h1>Jen Huynh - CNIT 132</h1>
+        </header>
+    </div>   
+       <div class="sidebar">
+    <nav>    
         <ul>
-            <li><a href="http://jhuynh17.github.io/homework1.html">Home</a></li>
+            <h2>Menu</h2>
+            <li><a href="homework1.html">Home</a></li>
             <li><a href="assignments.html">Assignments</a></li>
-            <li>MeetUp Report</li>
-            <li>Contact</li>
+            <li><a href="meetup.html">MeetUp Report</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
+    </nav>
+</div>
+    <main>
+        <div class="content">
+        <section>
         <article>
         <h2>Meet Jen</h2>    
-        <img src="jh-photo.jpg" alt="Image of Jen Huynh wearing a black button up shirt" width="150" height="150">
+        <img class="profilepic" src="jh-photo.jpg" alt="Image of Jen Huynh wearing a black button up shirt">
         <p>Hello everyone! My name is Jen. I am a local native to San Francisco who enjoys going on hikes, crafting, and cooking. One of my favorite hiking trails that is very beginner friendly is Lands End. Most of the land is flat with slight inclines and stairs. Things I love to cook is Italian and Asian dishes. I also enjoy collecting old magazines and making collages and crafts out of them!</p>
         <p>In terms of my career path, my goal by the end of this year is to become more advanced and knowledge in web development. My first introduction to web development started in high school. There I learned what file transfer protocol is, how important having all your files in one folder was, and what HTML and CSS was and what it could do. What amazed me about HTML and CSS is what I could create 
         through words and text strung together. It was amazing and it led me to come back to web development years later which is now into CCSF's CNIT Web Development classes. Through this program, I hope to gain more skills and be able to build more complex and userfriendly websites for others and companies. One of my favorite websites to help me learn web development is <a href="https://www.freecodecamp.org/" target="_blank" rel="noopener noreferrer">freeCodeCamp</a>.
@@ -31,13 +47,21 @@
         <hr>
         <article>
        <h2>"Good Links"</h2>
-       <ul>
-           <li><a href="https://www.w3schools.com/">W3Schools</a> is a place that all web developers will need. It is a go to learn to build web pages, learn languages, and have tutorials on how code works and functions. It is a good site for clarification of HTML or CSS or learning new tricks on how to build different aspects of a webpage.</li>
-           <li><a href="https://stackoverflow.com/">Stack Overflow</a> is a webpage full of forums for developers, programmers, and anyone who codes to ask questions and answer them. Even as a beginner web developer myself, I ask questions and often find answers to my questions from others who respond to other forums on Stack Overflow.</li>
-           <li><a href="https://css-tricks.com/">CSS-Tricks</a> is a great resource for web developers. The webpage provides tricks, methods, tips, and tricks to use CSS. There are also many blog posts that can be found that relates to how CSS is being used currently and what trends in web development there are.</li>
+       <ul class="goodlinks">
+           <li><a href="https://www.w3schools.com/" target="_blank">W3Schools</a> is a place that all web developers will need. It is a go to learn to build web pages, learn languages, and have tutorials on how code works and functions. It is a good site for clarification of HTML or CSS or learning new tricks on how to build different aspects of a webpage.</li>
+           <li><a href="https://stackoverflow.com/" target="_blank">Stack Overflow</a> is a webpage full of forums for developers, programmers, and anyone who codes to ask questions and answer them. Even as a beginner web developer myself, I ask questions and often find answers to my questions from others who respond to other forums on Stack Overflow.</li>
+           <li><a href="https://css-tricks.com/" target="_blank">CSS-Tricks</a> is a great resource for web developers. The webpage provides tricks, methods, tips, and tricks to use CSS. There are also many blog posts that can be found that relates to how CSS is being used currently and what trends in web development there are.</li>
        </ul>
     </article>
     </section>
+</main>
+</div>
+    <footer class="footer">
+        <h3>Contact Jen</h3>
+        <a href="mailto:jhuynh17@mail.ccsf.edu">Email Jen</a> |
+        <a href="contact.html" target="_blank" rel="noopener noreferrer">Contact Jen Form</a> | 
+        <a href="homework1.html" target="_blank" rel="noopener noreferrer">Jen's Website Homepage</a>
+    </footer>
+</body>
     </body>
 </html>
-<!-- Jen Huynh, Created Febuary 22, 2021 -->
