--- a/homework1.html
+++ b/homework1.html
@@ -21,9 +21,9 @@
         </header>
     </div>   
        <div class="sidebar">
-    <nav>    
+    <nav>   
+        <h2 class="menu">Menu</h2> 
         <ul>
-            <h2>Menu</h2>
             <li><a href="homework1.html">Home</a></li>
             <li><a href="assignments.html">Assignments</a></li>
             <li><a href="meetup.html">MeetUp Report</a></li>
@@ -34,8 +34,7 @@
     <main>
         <div class="content">
         <section>
-        <article>
-        <h2>Meet Jen</h2>    
+            <h2>Meet Jen</h2> 
         <img class="profilepic" src="jh-photo.jpg" alt="Image of Jen Huynh wearing a black button up shirt">
         <p>Hello everyone! My name is Jen. I am a local native to San Francisco who enjoys going on hikes, crafting, and cooking. One of my favorite hiking trails that is very beginner friendly is Lands End. Most of the land is flat with slight inclines and stairs. Things I love to cook is Italian and Asian dishes. I also enjoy collecting old magazines and making collages and crafts out of them!</p>
         <p>In terms of my career path, my goal by the end of this year is to become more advanced and knowledge in web development. My first introduction to web development started in high school. There I learned what file transfer protocol is, how important having all your files in one folder was, and what HTML and CSS was and what it could do. What amazed me about HTML and CSS is what I could create 
@@ -43,7 +42,6 @@
         freeCodeCamp is one of my favorite websites because it provides anyone interested in learning to code free education and courses to follow. The website has courses to gain free certifications to responsive web design, JavaScript, data visualization, and more.
         This website has definitely influenced me to gain more interest in web development as I went through some of their responsive web design course, I was able to build new projects and webpages. It has taught me to debug, learn to customize webpages, and more.</p>
         <p>To become a good web developer, you not only should know how to code, but you should understand the history behind web development. <a href="https://www.techopedia.com/2/31579/networks/a-brief-history-of-web-development#the-turn-of-the-century" target="_blank" rel="noopener noreferrer">The Turn of the Century</a> discusses a brief history of web development. The article discusses the old web, what the early 2000-2001 of the web looked like which was the turn of the century, and about web interface and internet technology.</p>
-    </article>
         <hr>
         <article>
        <h2>"Good Links"</h2>
@@ -54,14 +52,14 @@
        </ul>
     </article>
     </section>
-</main>
 </div>
+</main>
     <footer class="footer">
         <h3>Contact Jen</h3>
         <a href="mailto:jhuynh17@mail.ccsf.edu">Email Jen</a> |
         <a href="contact.html" target="_blank" rel="noopener noreferrer">Contact Jen Form</a> | 
         <a href="homework1.html" target="_blank" rel="noopener noreferrer">Jen's Website Homepage</a>
     </footer>
+    </div>
 </body>
-    </body>
 </html>
