--- a/contact.html
+++ b/contact.html
@@ -21,8 +21,8 @@
         </div>
         <div class="sidebar">
         <nav>
+            <h2>Menu</h2>
             <ul>
-                <h2>Menu</h2>
                 <li><a href="homework1.html">Home</a></li>
                 <li><a href="assignments.html">Assignments</a></li>
                 <li><a href="meetup.html">MeetUp Report</a></li>
@@ -32,15 +32,14 @@
         </div>
         <main>
             <div class="content">
-       <section>
-        <article>
+        <section>
         <h2>Contact Jen</h2>  
         <img src="jh-photo.jpg" alt="Image of Jen Huynh wearing a black button up shirt" width="150" height="150">
         <p>Hello everyone! My name is Jen. I am a local native to San Francisco who enjoys going on hikes, crafting, and cooking. One of my favorite hiking trails that is very beginner friendly is Lands End. In terms of my career path, my goal by the end of this year is to become more advanced and knowledge in web development.</p>
         <p>If you are wishing to get in contact with Jen, please fill out the form below or use the information and links in the footer to get in contact with her.</p>  
-    </article>
+        </section>
         <hr>
-        <article>
+        <section>
        <h2>Get in touch with Jen</h2>
       <form class="contactform" action="#" method="post">
           <div>
@@ -53,15 +52,15 @@
         <input type="submit" value="Submit"> &nbsp; <input type="reset" value="Clear">
         </div>
         </form>
-    </article>
     </section>
-</main>
 </div>
-    <footer>
+</main>
+    <footer class="footer">
         <h5>Contact Jen</h5>
         <a href="mailto:jhuynh17@mail.ccsf.edu">Email Jen</a> |
         <a href="contact.html">Contact Jen Form</a> | 
         <a href="homework1.html">Jen's Website Homepage</a>
     </footer>
+    </div>
     </body>
 </html>
