--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
         </div>
         <div class="sidebar">
         <nav>
-            <h2>Menu</h2>
+            <h2 class="menu">Menu</h2>
             <ul>
                 <li><a href="homework1.html">Home</a></li>
                 <li><a href="assignments.html">Assignments</a></li>
