--- a/assignments.html
+++ b/assignments.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+ <!--Jen Huynh, Created Febuary 22, 2021 --> 
 <html lang="en">
     <head>
         <meta charset="utf-8">
@@ -16,7 +17,7 @@
         <a href="homework2.html">Working with CSS</a> |
         <a href="assig5.html">CSS Pseudo and Position</a> |
         <a href="assig7.html">Building Forms with CSS and HTML</a> |
-        <a href="meetup.html">MeetUp Report</a>
-        <!--Jen Huynh, Created Febuary 22, 2021 --> 
+        <a href="meetup.html">MeetUp Report</a> | 
+        <a href="homework1.html">Jen's Website Homepage</a>
     </body>
 </html>
